# EasyBehaviour

./: .gitignore  LICENSE  README.md
appBehaviour/: package-lock.json  (+1 more)
pyBehaviour/: README.md  pyproject.toml
pyBehaviour/scripts/: check_label.py  convert_videos.py  fix_videos.py  flip_analysis.py  import_to_db.py  syllable_frequencies.py
pyBehaviour/scripts/handling/ratio/: Handling_GroupComparison.py  convert_labels.py  ratio_analysis.py  test.py
pyBehaviour/scripts/handling/syllables/: model_frequencies_analysis.py  model_projections.py
pyBehaviour/scripts/reaching/: analyse_file_labels.py  analyze_file_labels.py  build_group_data.py  fix_header.py  get_file_csv.py  multi_group_distance.py  napari_manual.py  preprocess_data.py  preprocess_data_example.py
pyBehaviour/scripts/runway/: flip_videos.py
pyBehaviour/scripts/syllables/: model_frequencies_analysis.py  model_projections.py
pyBehaviour/src/pybehaviour/: __init__.py
pyBehaviour/src/pybehaviour/db_support/: __init__.py  massive_import.py
pyBehaviour/src/pybehaviour/dlc_support/: __init__.py  video_convert.py
pyBehaviour/src/pybehaviour/io/: File.py  Group.py  __init__.py  metadata.py  scrap.py  video.py
pyBehaviour/src/pybehaviour/metadata/: __init__.py  filename_meta.py
pyBehaviour/src/pybehaviour/moseq_support/: Label.py  __init__.py  analysed_dataclass.py  fix_error.py  fix_rotation.py  flip_data_horizontal.py  flip_sanity.py
pyBehaviour/src/pybehaviour/plots/: PlotSettings.py  __init__.py  bar_plot.py
pyBehaviour/src/pybehaviour/reaching/: GroupScrap.py  __init__.py  io.py  old_io.py
pyBehaviour/src/pybehaviour/save/: SaveSettings.py  __init__.py  save_plot.py
pyBehaviour/src/pybehaviour/styling/: nr_style_paper.mplstyle
pyBehaviour/src/pybehaviour/syllable_analysis/: __init__.py
(+143 files in other folders)
