[project]
name = "pybehaviour"
version = "0.1.0"
description = "A python package to help you with your behvaiour analysis"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pybehaviour", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
