[project]
name = "pybehaviour"
version = "0.1.0"
description = "A python package to help you with your behvaiour analysis"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numba (>=0.61)",
    "llvmlite (>=0.44)",
    "umap-learn (>=0.5.11,<0.6.0)"
]

[tool.poetry]
packages = [{include = "pybehaviour", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
